# Hart-MCP

./: .gitignore  .gitmodules  Build.ps1  CONSOLIDATION_PLAN.md  Hart.MCP.sln  QuickStart.ps1  README.md  SeedDatabase.cs  test_hilbert.csx
.claude/: settings.local.json
.github/workflows/: build.yml
database/: schema.sql
docs/: ARCHITECTURE.md  ARCHITECTURE_FIX.md  CHECKLIST.md  EXECUTIVE_SUMMARY.md  FRONT_END_REQUIREMENTS.md  IMPLEMENTATION-SUMMARY.md  INGESTION.md  PIVOT_PLAN.md  PROCESS.md  QUICK_REFERENCE.md  SESSION_NOTES.md  STATUS.md  TECHNICAL_SPEC.md  VISUAL_ARCHITECTURE.md
src/Hart.MCP.Api/: Hart.MCP.Api.csproj  Hart.MCP.Api.http  Program.cs  appsettings.json
src/Hart.MCP.Api/Controllers/: AIQueryController.cs  ConversationsController.cs  IngestController.cs  IngestionAndAnalyticsController.cs  ModelsController.cs  PerformanceController.cs  QueryController.cs  SpatialNodesController.cs  VisualizationController.cs
src/Hart.MCP.Api/Middleware/: GlobalExceptionHandler.cs  RequestTimingMiddleware.cs
src/Hart.MCP.Api/Migrations/: 20251225120254_AddMetadataAndOptimizations.Designer.cs  20251225120254_AddMetadataAndOptimizations.cs  20251225150000_RemoveMetadataAddTypeRef.cs  20251225223017_ThreeTableSchema.Designer.cs  20251225223017_ThreeTableSchema.cs  HartDbContextModelSnapshot.cs
src/Hart.MCP.Api/Properties/: launchSettings.json
src/Hart.MCP.Api/Validation/: ValidationAttributes.cs
src/Hart.MCP.App/: App.xaml  App.xaml.cs  Hart.MCP.App.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/Hart.MCP.App/Components/: _Imports.razor
src/Hart.MCP.App/wwwroot/: index.html
src/Hart.MCP.Core/: Hart.MCP.Core.csproj  VerifyMobyDick.csx
src/Hart.MCP.Core/Data/: HartDbContext.cs
src/Hart.MCP.Core/Entities/: Atom.cs  Composition.cs  Constant.cs  Relation.cs
src/Hart.MCP.Core/Native/: HartNative.cs  NativeLibrary.cs
src/Hart.MCP.Core/Services/: AIQueryService.cs  (+4 more)
src/Hart.MCP.Maui/: App.xaml  App.xaml.cs  Hart.MCP.Maui.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
src/Hart.MCP.Native/: CMakeLists.txt  build.ps1
src/Hart.MCP.Native/include/hartonomous/: atom_seed.h  bulk_ingestion.h  content_hash.h  db_connection.h  hilbert.h  hilbert_curve.h  landmark_projection.h  simd.h  text_ingestion.h  types.h
src/Hart.MCP.Native/lib/: hartonomous_native.lib  win-x64
src/Hart.MCP.Native/src/: atom_seed.c  bulk_ingestion.cpp  content_hash.c  content_hash.cpp  cpe.cpp  db_connection.cpp  embedding_ingestion.cpp  hilbert.c  hilbert_curve.cpp  landmark_projection.cpp  reconstruction.cpp  simd.c  spatial_ops.cpp  text_ingestion.cpp  weight_ingestion.cpp
src/Hart.MCP.Native/tests/: test_atom_seed.c  test_hilbert.c  test_main.cpp
src/Hart.MCP.Tests/: AIQueryServiceTests.cs  AtomIngestionServiceTests.cs  Hart.MCP.Tests.csproj  HartNativeTests.cs  HierarchicalTextIngestionServiceTests.cs  NativeLibraryTests.cs  SpatialQueryServiceTests.cs
src/Hart.MCP.Web/: Hart.MCP.Web.csproj  Program.cs  appsettings.json
(+37 files in other folders)
